logs/dag_id=COVID-19/run_id=manual__2023-11-23T225317.833739+0000/task_id=Create_table/attempt=1.log
[2023-11-23T22:53:19.630+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: COVID-19.Create_table manual__2023-11-23T22:53:17.833739+00:00 [queued]>
[2023-11-23T22:53:19.641+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: COVID-19.Create_table manual__2023-11-23T22:53:17.833739+00:00 [queued]>
[2023-11-23T22:53:19.642+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-23T22:53:19.653+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Create_table> on 2023-11-23 22:53:17.833739+00:00
[2023-11-23T22:53:19.660+0000] {standard_task_runner.py:57} INFO - Started process 2867 to run task
[2023-11-23T22:53:19.668+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'COVID-19', 'Create_table', 'manual__2023-11-23T22:53:17.833739+00:00', '--job-id', '107', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl.py', '--cfg-path', '/tmp/tmpz6_vgiya']
[2023-11-23T22:53:19.676+0000] {standard_task_runner.py:85} INFO - Job 107: Subtask Create_table
[2023-11-23T22:53:19.768+0000] {task_command.py:416} INFO - Running <TaskInstance: COVID-19.Create_table manual__2023-11-23T22:53:17.833739+00:00 [running]> on host 89d301135b3a
[2023-11-23T22:53:20.451+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='COVID-19' AIRFLOW_CTX_TASK_ID='Create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-23T22:53:17.833739+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-23T22:53:17.833739+00:00'
[2023-11-23T22:53:20.453+0000] {sql.py:274} INFO - Executing: -- Table des dimensions
CREATE TABLE IF NOT EXISTS Departement (
    num_departement VARCHAR(255) NOT NULL,
    nom_departement VARCHAR(255) NOT NULL,
    nom_region VARCHAR(255) NOT NULL,
    PRIMARY KEY (num_departement)
);

CREATE TABLE IF NOT EXISTS Passage (
    id_passage INT NOT NULL AUTO_INCREMENT,
    nombre_passage_corona INT,
    nombre_passage_total INT,
    nombre_passage_corona_h INT,
    nombre_passage_corona_f INT,
    nombre_passage_total_h INT,
    nombre_passage_total_f INT,
    PRIMARY KEY (id_passage)
);

CREATE TABLE IF NOT EXISTS Hospitalisation (
    id_hospitalisation INT NOT NULL AUTO_INCREMENT,
    nombre_hospitalisation_corona INT,
    nombre_hospitalisation_corona_h INT,
    nombre_hospitalisation_corona_f INT,
    PRIMARY KEY (id_hospitalisation)
);

CREATE TABLE IF NOT EXISTS Age (
    id_age INT NOT NULL AUTO_INCREMENT,
    tranche_age VARCHAR(255) NOT NULL,
    PRIMARY KEY (id_age)
);

-- Table des faits
CREATE TABLE IF NOT EXISTS Urgence_covid (
    id_urgence_covid INT NOT NULL AUTO_INCREMENT,
    date_de_passage DATE,
    id_hospitalisation INT,
    id_passage INT,
    id_age INT,
    num_departement VARCHAR(255),
    PRIMARY KEY (id_urgence_covid),
    FOREIGN KEY (id_hospitalisation) REFERENCES Hospitalisation(id_hospitalisation),
    FOREIGN KEY (id_passage) REFERENCES Passage(id_passage),
    FOREIGN KEY (id_age) REFERENCES Age(id_age),
    FOREIGN KEY (num_departement) REFERENCES Departement(num_departement)
);

-- INSERT INTO Age VALUES (0, "tous 창ges");
-- INSERT INTO Age VALUES (1, "0-4 ans");
-- INSERT INTO Age VALUES (2, "5-14 ans");
-- INSERT INTO Age VALUES (3, "15-44 ans");
-- INSERT INTO Age VALUES (4, "45-64 ans");
-- INSERT INTO Age VALUES (5, "65-74 ans");
-- INSERT INTO Age VALUES (6, "75 ans et plus");

INSERT INTO Age (id_age, tranche_age) VALUES (0, 'tous 창ges') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (1, '0-4 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (2, '5-14 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (3, '15-44 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (4, '45-64 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (5, '65-74 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (6, '75 ans et plus') ON CONFLICT (id_age) DO NOTHING;
[2023-11-23T22:53:20.465+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-23T22:53:20.474+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-23T22:53:20.488+0000] {sql.py:418} INFO - Running statement: -- Table des dimensions
CREATE TABLE IF NOT EXISTS Departement (
    num_departement VARCHAR(255) NOT NULL,
    nom_departement VARCHAR(255) NOT NULL,
    nom_region VARCHAR(255) NOT NULL,
    PRIMARY KEY (num_departement)
);

CREATE TABLE IF NOT EXISTS Passage (
    id_passage INT NOT NULL AUTO_INCREMENT,
    nombre_passage_corona INT,
    nombre_passage_total INT,
    nombre_passage_corona_h INT,
    nombre_passage_corona_f INT,
    nombre_passage_total_h INT,
    nombre_passage_total_f INT,
    PRIMARY KEY (id_passage)
);

CREATE TABLE IF NOT EXISTS Hospitalisation (
    id_hospitalisation INT NOT NULL AUTO_INCREMENT,
    nombre_hospitalisation_corona INT,
    nombre_hospitalisation_corona_h INT,
    nombre_hospitalisation_corona_f INT,
    PRIMARY KEY (id_hospitalisation)
);

CREATE TABLE IF NOT EXISTS Age (
    id_age INT NOT NULL AUTO_INCREMENT,
    tranche_age VARCHAR(255) NOT NULL,
    PRIMARY KEY (id_age)
);

-- Table des faits
CREATE TABLE IF NOT EXISTS Urgence_covid (
    id_urgence_covid INT NOT NULL AUTO_INCREMENT,
    date_de_passage DATE,
    id_hospitalisation INT,
    id_passage INT,
    id_age INT,
    num_departement VARCHAR(255),
    PRIMARY KEY (id_urgence_covid),
    FOREIGN KEY (id_hospitalisation) REFERENCES Hospitalisation(id_hospitalisation),
    FOREIGN KEY (id_passage) REFERENCES Passage(id_passage),
    FOREIGN KEY (id_age) REFERENCES Age(id_age),
    FOREIGN KEY (num_departement) REFERENCES Departement(num_departement)
);

-- INSERT INTO Age VALUES (0, "tous 창ges");
-- INSERT INTO Age VALUES (1, "0-4 ans");
-- INSERT INTO Age VALUES (2, "5-14 ans");
-- INSERT INTO Age VALUES (3, "15-44 ans");
-- INSERT INTO Age VALUES (4, "45-64 ans");
-- INSERT INTO Age VALUES (5, "65-74 ans");
-- INSERT INTO Age VALUES (6, "75 ans et plus");

INSERT INTO Age (id_age, tranche_age) VALUES (0, 'tous 창ges') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (1, '0-4 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (2, '5-14 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (3, '15-44 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (4, '45-64 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (5, '65-74 ans') ON CONFLICT (id_age) DO NOTHING;
INSERT INTO Age (id_age, tranche_age) VALUES (6, '75 ans et plus') ON CONFLICT (id_age) DO NOTHING;, parameters: None
[2023-11-23T22:53:20.491+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AUTO_INCREMENT"
LINE 10:     id_passage INT NOT NULL AUTO_INCREMENT,
                                     ^

[2023-11-23T22:53:20.502+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=COVID-19, task_id=Create_table, execution_date=20231123T225317, start_date=20231123T225319, end_date=20231123T225320
[2023-11-23T22:53:20.707+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 107 for task Create_table (syntax error at or near "AUTO_INCREMENT"
LINE 10:     id_passage INT NOT NULL AUTO_INCREMENT,
                                     ^
; 2867)
[2023-11-23T22:53:20.728+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-23T22:53:20.748+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
